web/themes/custom/cloudy/src/components/_form.scss
/* ... */
// START Cloudy-specific components

label {
  display: table;
  font-weight: $font-weight-semibold;
  margin-bottom: 0;
}

.form-inline label {
  justify-content: left;
}

.form-inline .form-group {
  margin-right: spacer(4);
}

.form-inline .form-actions,
.container-inline .form-actions {
  align-items: bottom !important;
}

select.form-select {
  @extend .form-control;

  border-radius: 0.125rem;
  // We are adding max-width here to protect against situations where long select options would otherwise break out
  // of their parent container due to natural layout flow. Adding max-width here ensures our select will not disturb
  // the layout in floated situations. (e.g. select filter in a right-hand sidebar layout)
  max-width: 100%;
}

.views-exposed-form form {
  margin-bottom: spacer(8);
}

.views-exposed-form .form-actions {
  @extend .align-self-end;
}

.webform-element-description p,
form .description p {
  font-size: $font-size-sm !important;
  margin-bottom: 0;
}

.webform-element-description,
form .description,
form .counter {
  display: block;
  font-size: $font-size-sm !important;
  margin-bottom: spacer(3);
}

fieldset legend {
  float: none;
  font-size: 1rem !important;
  font-weight: $font-weight-semibold !important;
}

.entity-content-form-footer {
  border: $border-width solid $light;
  padding: (spacer(4) * 1.5);
  margin-bottom: (spacer(4) * 2) !important;
  background-color: $light;
}

// Form control
.view-filters {
  margin-bottom: spacer(8);
}

.invalid-feedback {
  display: inherit;
}

// exposed filter forms

div.date-links {
  flex-basis: 100%;
  margin-bottom: 30px;
}

span.prev-link {
  margin-right: 30px;
}

span.next-link .fas {
  margin: 0 0 0 spacer(2);
}

// Chosen form overrides
.chosen-container-single {
  .chosen-single {
    padding-left: spacer(4) * 0.75;
  }
}

.chosen-container-multi {
  .chosen-choices {
    padding: (spacer(4) * 0.375) (spacer(4) * 0.75);

    li.search-choice {
      padding: (spacer(4) * 0.375) (spacer(4) * 1.5) (spacer(4) * 0.375) (spacer(4) * 0.75);
      display: flex;
      align-items: center;

      .search-choice-close {
        top: spacer(4) * 0.5;
        right: spacer(4) * 0.25;
      }
    }
  }
}

// Facets
.facets-widget-checkbox {
  padding: spacer(4);
  background: $light;

  ul {
    list-style: none;
    margin-bottom: 0;
    padding-left: 0;
  }

  .form-item {
    margin-top: inherit;
    margin-bottom: inherit;
  }
}

.facet-item {
  @extend .form-check;

  &:not(:last-of-type) {
    margin-bottom: spacer(2);
  }

  &__count {
    margin-left: spacer(1);
  }

  .facets-checkbox {
    float: left;
    margin-right: spacer(2);
    margin-top: 0.35rem;
  }

  label {
    font-weight: normal;
    margin: 0;
  }

  ul {
    margin-top: spacer(2);
  }
}

.facet-empty {
  display: none;
}

.facets-reset .facet-item__count {
  display: none;
}

.form-wrapper {
  margin: 0 0 spacer(4);
}

.region-tools .form-text,
.region-tools .form-select {
  max-width: 255px;
}

// End Cloudy-specific components

// Webform

.webform-multiple-table {
  table {
    @extend .table;

    width: auto;
  }

  td input[type="image"] {
    box-sizing: border-box;
    width: spacer(6);
    vertical-align: middle;
  }

  th,
  td {
    background-color: inherit !important;
    padding: 0;
  }

  .form-select,
  .form-control {
    margin-top: 0;
  }

  td.webform-multiple-table--handle {
    width: unset;
  }

  .tabledrag-handle {
    height: auto !important;

    .handle {
      background-position: center;
      background-size: contain;
      margin: 0;
      padding: 0;
      margin-left: spacer(2);
      height: spacer(6);
      width: spacer(6);
    }
  }

  .webform-multiple-table--operations {
    padding-right: spacer(2) !important;
  }
}

.webform-multiple-add {
  align-items: center;
  display: flex;
  gap: spacer(4);
  margin-top: spacer(2) !important;

  input[type="number"] {
    margin-top: 0;
  }
}

.webform-submission-form {
  // Webforms use cloudy alert style as opposed to bootstrap alert
  .alert {
    @extend .cloudy-alert;
  }

  .alert h2 {
    margin-top: 0 !important;
  }

  .float-right {
    float: right !important;
  }

  .float-left {
    float: left !important;
  }

  .checkbox-button-outline-primary label.option {
    display: inline-block;
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    user-select: none;
    background-color: transparent;
    color: #1d62c9;
    border: 2px solid #1d62c9;
    border-radius: 0.2rem;
    margin-left: auto;
    margin-right: 0;
    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
      border-color 0.15s ease-in-out;
    cursor: pointer;
  }

  .checkbox-button-outline-primary label.option:hover {
    background-color: #1d62c9;
    color: #ffffff;
    border: 2px solid #1d62c9;
    border-radius: 0.2rem;
  }
}

img.inline-icon {
  height: 20px;
}

fieldset.portland-support-agent-widget--wrapper {
  padding: 15px;
  background-color: #cccccc;

  .details-wrapper {
    padding: 0;
  }
}

.permit-guide {
  div.alert {
    border-left: 6px solid #00b3b3;
    background-color: #cce5ff;
    color: #004085;
  }

  div.warning {
    color: #856404;
    background-color: #fff3cd;
    border-left: 6px solid #f0ad4e;
  }

  div.error {
    color: #721c24;
    border-left: 6px solid #dc3545;
    background-color: #f8e6e7;
  }

  div.error a,
  div.alert a,
  div.warning a {
    color: inherit;
    text-decoration: underline;

    &:hover {
      color: inherit;
      text-decoration: underline;
    }
  }

  .warning p:last-of-type,
  .alert p:last-of-type,
  .error p:last-of-type,
  .card p:last-of-type {
    margin-bottom: 0 !important;
  }
}

// Fix select styling in Mozilla Firefox
@supports (-moz-appearance: none) {
  select {
    background-color: white;
  }
}

.portland-node-fetcher__wrapper {
  position: relative;
}
/* ... */

